# DiffTMM

./: .gitignore  1_forward_simu.ipynb  1_forward_simu.py  2_inverse_design.ipynb  2_inverse_design.py  3_real_materials.ipynb  4_incoherent_film.ipynb  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml
benchmarks/: 1_compare_angle_response_anisotropic.py  1_compare_angle_response_isotropic.py  2_compare_speed.py  3_compare_memory.py  4_compare_incoherent.py
difftmm/: __init__.py  film_solver_anisotropic.py  film_solver_incoherent.py  film_solver_isotropic.py
difftmm/material/: __init__.py  materials.py
difftmm/material/catalogs/: thin_film_materials.json
docs/superpowers/plans/: 2026-05-26-incoherent-tmm.md  2026-05-26-real-material-support.md
docs/superpowers/specs/: 2026-05-26-real-material-support-design.md
tests/: test_incoherent_tmm.py
tests/material/: conftest.py  test_anisotropic_core_refactor.py  test_anisotropic_materials.py  test_backward_compat.py  test_isotropic_core_refactor.py  test_material_class.py  test_resolve_indices.py  test_solver_with_materials.py
